@@ -5,7 +5,9 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- BugFix: Do not break if username (loginname) is passed as userid.
+  Like plone.app.discussion does until 2.3.2
+  [mathias.leimgruber]
 
 
 1.0.2 (2014-05-03)
